Lots of stuff happened. Now I am going to change the double matrices to use bigdecimal instead.